test/sema/struct_in_unary.dmz
// RUN: (dmz %s -res-dump 2>&1 || true) | filecheck %s
struct S {
    x: i32,
}

fn main() -> void {
    let s = S{x: 1};

    !s;
    // CHECK: [[# @LINE - 1 ]]:6: error: 'S{}' cannot be used as an operand to unary operator '!'
}